[package]
name = "rtool"
version = "0.1.0"
edition = "2021"
description = "rust utils"
license = "MIT"
readme="readme.md"
documentation="https://huifer.github.io/rtool/"
repository = "https://github.com/huifer/rtool"
homepage="https://huifer.github.io/rtool/"
keywords = ["rust", "utils"]
authors=["Zen Huifer <huifer97@163.com>"]
[dependencies]
chrono = "0.4.31"
encoding_rs = "0.8.33"
base64 = "0.13"
rust-crypto = "0.2.36"
openssl = "0.10"
rand = "0.8"
regex = "1.5"



zip = "0.6"
zip-extensions = "0.6"

[dev-dependencies]
cargo-tarpaulin = "0.27.2"
cargo-html = "0.2.1"